--- a/src/app/components/book-list/book-list.component.html
+++ b/src/app/components/book-list/book-list.component.html
@@ -1,6 +1,9 @@
-<div class="row" *ngIf="books.length!=0">
+<div class="row" *ngIf="bookList.length!=0">
 	<div class="col-xs-12 col-md-offset-3 col-md-6">
-		<a *ngFor="let book of books" style="cursor:pointer" class="list-group-item clearfix" (click)="onClick(book.id)">
+		<a *ngFor="let book of bookList" 
+		   style="cursor:pointer" 
+		   class="list-group-item clearfix" 
+		   (click)="onClick(book.id)">
 			<div class="col-xs-10">
 				<h4>{{ book.title }}</h4>
 				<div *ngFor="let author of book.authors">
@@ -8,8 +11,12 @@
 				</div>
 			</div>
 			<div class="col-xs-2">
-				<span class="pull-right" *ngIf="book.smallThumbnail!=null">
-					<img src="{{ book.smallThumbnail }}" alt="{{ book.title }}" class="img-responsive" style="max-height: 64px;">
+				<span class="pull-right" 
+					  *ngIf="book.smallThumbnail!=null">
+					<img src="{{ book.smallThumbnail }}" 
+						 alt="{{ book.title }}" 
+						 class="img-responsive" 
+						 style="max-height: 64px;">
 				</span>
 			</div>
 		</a>
